# hydra

./: .coveragerc  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: tests.yaml
docs/: conf.py  index.rst
notebooks/: TestContext.ipynb  start_grpc_server.py
notebooks/Store/: StoreDev.ipynb  StoreUser.ipynb
src/: generate_protos.sh
src/hydra/: __init__.py  skeleton.py  start_grpc_server.py  test_context.py  test_server.py
src/hydra/common/: __init__.py  serializable.py  utils.py
src/hydra/communication/: __init__.py  client.py
src/hydra/communication/grpc/: client.py
src/hydra/context/: __init__.py  context.py
src/hydra/encoder/: __init__.py  fixedpoint_encoder.py
src/hydra/proto/communication/: client_pb2.py  client_pb2.pyi
src/hydra/proto/context/: context_pb2.py  context_pb2.pyi
src/hydra/proto/service/: context_ops_pb2.py  context_ops_pb2.pyi  context_ops_pb2_grpc.py  crypto_ops_pb2.py  crypto_ops_pb2_grpc.py  crypto_pb2.py  crypto_pb2.pyi  crypto_pb2_grpc.py  share_tensor_ops_pb2.py  share_tensor_ops_pb2.pyi  share_tensor_ops_pb2_grpc.py  (+3 more)
src/hydra/protocol/: protocol.py
src/hydra/store/: __init__.py  memory_store.py  store.py
src/hydra/tensor/: __init__.py  tensor.py
tests/: conftest.py  test_skeleton.py
tests/hydra/common/: utils_test.py
tests/hydra/context/: context_test.py
tests/hydra/encoder/: fixed_point_encoder_test.py  fixedpoint_encoder_test.py
tests/hydra/store/: memory_store_test.py
tests/hydra/tensor/: tensor_test.py
(+22 files in other folders)
