[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
    src/hydra/proto
  | docs/.*.py
)
'''

[tool.isort]
profile = "black"
skip = ["docs", "proto"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
force_single_line = true
remove_redundant_aliases = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
lines_between_types = 0
force_sort_within_sections = true
import_heading_future = "future"
import_heading_stdlib = "stdlib"
import_heading_thirdparty = "third party"
ignore_comments = false
honor_noqa = true

[tooldarglint]
docstring_style = "GOOGLE"

[tool.mypy]
python_version = 3.10

[tool.flake8]
max_complexity = 11
show_source = true
statistics = true
count = true
